--- a/tao/sed/equating_integrands.tex
+++ b/tao/sed/equating_integrands.tex
@@ -82,7 +82,7 @@ We now seek to demonstrate that the above can only by true if
 \[ f(x) = G(x) \; . \]
 To show that $f(x) = G(x)$ we will use a proof by contradiction; we will show that a combination of $f$ and $G$ that are not equal contradict the requirement that
 \[ \int^{x_1}_{x_0} f(x) - G(x) \dx{x} = 0 \; . \]
-If $f(x) \ne G(x)$ then there must exist some value of $x$, say $x_e$, such that $f(x_e) \ne G(x_e)$. Now because both $f$ and $G$ are $C^0$ continuous there exists a positive non-zero real-valued parameter $\epsilon$ such that $f(z) \lt G(z)$ or $f(z) \gt G(z)$ for all $x_e - \epsilon \le z \le x_e + \epsilon$. With $f(z)$ and $G(z)$ not crossing each other at any point in $z$, $f(z) - G(z)$ will be either be all positive or all negative at all points in $z$. Thus,
+If $f(x) \ne G(x)$ then there must exist some value of $x$, say $x_e$, such that $f(x_e) \ne G(x_e)$. Now because both $f$ and $G$ are $C^0$ continuous there exists a positive non-zero real-valued parameter $\epsilon$ such that $f(z) < G(z)$ or $f(z) > G(z)$ for all $x_e - \epsilon \le z \le x_e + \epsilon$. With $f(z)$ and $G(z)$ not crossing each other at any point in $z$, $f(z) - G(z)$ will be either be all positive or all negative at all points in $z$. Thus,
 \[ \int_{x_e - \epsilon}^{x_e + \epsilon} f(x) - G(x) \dx{x} \ne 0 \; . \]
 But this equation is precisely equation \eqref{all_lhs} with the terminals set to $x_0 = x_e - \epsilon$ and $x_1 = x_e + \epsilon$, yet they both claim opposing conclusions, and therein lay the contradiction. Thus, only when $f(x) = G(x)$ can \eqref{all_lhs} be satisfied for all combinations of $x_0$ and $x_1$.
 
