Added back in hyperlinks.

--- a/tao/sed/magnitudes.tex
+++ b/tao/sed/magnitudes.tex
@@ -15,6 +15,7 @@
 \usepackage{amssymb}
 \usepackage{siunitx}
 \usepackage{listings}
+\usepackage{hyperref}
 %% \usepackage[scaled]{beramono}
 %% \renewcommand*\familydefault{\ttdefault}
 %% \usepackage[Tl]{fontenc}
@@ -46,7 +47,7 @@ of objects in a lightcone. In order to get started I will focus on AB
 magnitudes. The AB magnitude of an object is defined as
 \[ m_{ab} = -2.5\log_{10}F_{\nu} - 48.6 \; , \]
 where $F_\nu$ is the spectral flux density in $erg\cdot s^{-1}\cdot cm^{-2} \cdot Hz^{-1}$,
-as described in this linked article. We will be defining $F_\nu$ as
+as described in \href{http://meghnad.iucaa.ernet.in/~dipankar/ph217/magnitudes.pdf}{this linked article}. We will be defining $F_\nu$ as
 \[ F_\nu = \frac{I}{R} \; , \]
 where $I$ is the intensity of the object and $R$ is the normalisation
 with respect to the bandpass filter used. $I$ and $R$ are defined
@@ -57,12 +58,12 @@ R & = & \int_\nu r \dx{\nu}
 \end{eqnarray*}
 where $f_\nu$ is the sepctral energy density of the object in
 $erg\cdot s^{-1}\cdot cm^{-2}\cdot Hz^{-1}$ and $r$ is a unitless transmission
-response filter. This definition of $F_\nu$ is taken from this page, under AB system.
+response filter. This definition of $F_\nu$ is taken from \href{http://dls.physics.ucdavis.edu/calib/vegaab.html}{this page}, under AB system.
 
 The spectral energy densitiy will be given
 to us not as a function of frequency, as we need, but instead as
 a function of wavelength and in units of
-$erg\cdot s^{-1}\cdot cm^{-2}\cdot \angstrom^{-1}$. We refer to this quantity as
+$erg\cdot s^{-1}\cdot cm^{-2}\cdot \AA^{-1}$. We refer to this quantity as
 $f_\lambda$. In general $f_\lambda \ne f_\nu$, so we
 will need to find $f_\nu$ in terms of $f_\lambda$.
 We know that the energy of these values
