--- a/cuda_easy/thrust.tex
+++ b/cuda_easy/thrust.tex
@@ -32,47 +32,298 @@
 
 \frame{\frametitle{Table of contents}\tableofcontents}
 
-\section{First Section}
+\AtBeginSection[]
+{
+  \begin{frame}
+    \tableofcontents[currentsection]
+  \end{frame}
+}
+
+\section{Introduction}
 
 \begin{frame}
-  % Can use \begin{frame}[plain]{...} for plain frames.
-  \frametitle{Considerations}
-  \framesubtitle{Some?}
-  \Large
+  \frametitle{What is Thrust?}
+  A general library for using CUDA with C++.
+  Uses ``generic programming'' concepts.
+  Can make programming CUDA much easier.
+\end{frame}
+
+\begin{frame}
+  \frametitle{History}
+  Where did Thrust come from, who wrote it, when, etc.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Current Status}
+  Actively developed, supported by Nvidia, 240+ active users.
+\end{frame}
+
+\section{Results}
+
+\begin{frame}
+  \frametitle{Results}
+  \framesubtitle{The target problem}
   \begin{itemize}
-    \item Must handle large datasets.
-    \item Average request in hours (ideally minutes).
-    \item Scale over large number of distributed cores.
-    \item Use an SQL capable DB.
+    \item Conversion of an MPI parallel selection algorithm.
+    \item Used to find median of large distributed arrays.
+    \item Running with 10,000,000 elements per process.
+    \item Written in C++ using generic algorithms (STL).
   \end{itemize}
 \end{frame}
 
-\section{Second Section}
+\begin{frame}
+  \frametitle{Results}
+  \framesubtitle{Programming effort}
+  \begin{block}{Number of characters modified}
+    \centering
+    \vspace{1cm}
+    {\Huge $24^*$}
+    \vspace{1cm}
+  \end{block}
+  $^*$ {\it Not including build scripts or including headers.}
+\end{frame}
 
 \begin{frame}
-  \frametitle{Considerations}
-  \framesubtitle{Some?}
-  \Large
+  \frametitle{Results}
+  \framesubtitle{Programming time}
+  \begin{block}{Time spent modifying algorithm}
+    \centering
+    \vspace{1cm}
+    {\Huge $\approx 1$ minute$^*$}
+    \vspace{1cm}
+  \end{block}
+  $^*$ {\it Not including build scripts.}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Results}
+  \framesubtitle{Speedup}
+  \begin{block}{Measured speedup}
+    \centering
+    \vspace{1cm}
+    {\Huge $122x^*$}
+    \vspace{1cm}
+  \end{block}
+  $^*$ {\it Measured on gSTAR.}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Results}
+  \framesubtitle{Scaling}
+  \begin{block}{Weak scaling}
+    \centering
+    \vspace{1cm}
+    \vspace{1cm}
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Results}
+  \framesubtitle{Metrics}
+  \begin{block}{Metrics}
+    \vspace{1cm}
+    \hspace{0.5cm}{\Huge $x5$ per character changed.} \\
+    \hspace{0.5cm}{\Huge $x2$ per second spent.}
+    \vspace{1cm}
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Results}
+  {\Huge Of course...} \\
+  \vspace{.5cm}
   \begin{itemize}
-    \item Must handle large datasets.
-    \item Average request in hours (ideally minutes).
-    \item Scale over large number of distributed cores.
-    \item Use an SQL capable DB.
+    \item results may vary,
+    \item already written in C++,
+  \end{itemize}
+  \vspace{.5cm}
+  which brings us to ...
+\end{frame}
+
+\section{C++ and Generics}
+
+\begin{frame}
+  \frametitle{Why Am I Talking About C++?}
+  Because Thrust is written in C++. \\
+  \vspace{.2cm}
+  \hspace{.5cm}Why? \\
+  \vspace{.2cm}
+  \hspace{1cm}Because C++
+  \vspace{.1cm}
+  \begin{itemize}
+    \item allows object-oriented programming,
+    \item allows generic programming,
+    \item performs as well, if not more so, than C.
   \end{itemize}
 \end{frame}
 
-\section{Third section}
+\begin{frame}
+  \frametitle{Why Am I Talking About C++?}
+  Foreign concepts.
+\end{frame}
 
 \begin{frame}
-  \frametitle{Considerations}
-  \framesubtitle{Some?}
-  \Large
+  \frametitle{Differences With C}
+  \begin{columns}
+    \column{.5\textwidth}
+    \begin{block}{C}
+    \begin{itemize}
+    \item Procedural.
+    \end{itemize}
+    \end{block}
+
+    \column{.5\textwidth}
+    \begin{block}{C++}
+    \begin{itemize}
+    \item Procedural, object oriented, generic programming.
+    \end{itemize}
+    \end{block}
+  \end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Object Oriented Programming}
+  Talk about benefits, give some examples. Explain why
+  we need it for Thrust and how it helps.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Generic Programming}
+  \framesubtitle{What and why?}
+  Explain generally how generics can save us a lot
+  of effort by generalising algorithms to various kinds
+  of data structures. Separation of algorithms and data.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Generic Programming}
+  \framesubtitle{Templates}
+  Achieved in C++ using Templates.
+  As an example, show the conversion from an entirely C
+  implementation of a function to a C++ templated one.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Generic Programming}
+  \framesubtitle{Data Abstraction and the STL}
+  Show examples of a bunch of the STL containers and 
+  algorithms.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Generic Programming}
+  \framesubtitle{Iterators}
+  Explain iterators.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Performance}
+  \framesubtitle{Zero-overhead principle}
+  {\Huge ``You pay for what you use.''}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Performance}
+  \framesubtitle{The Poor Compiler}
+  Explain that with templates most of the overhead is
+  in the compilation phase. The runtime can be faster.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Performance}
+  \framesubtitle{Code Bloat}
+  Talk about this concern and how it doesn't exist.
+\end{frame}
+
+\section{Thrust}
+
+\begin{frame}
+  \frametitle{What Is It?}
+  A C++ set of algorithms and data structures built like
+  the STL; with generic programming concepts.
+  Give some history.
   \begin{itemize}
-    \item Must handle large datasets.
-    \item Average request in hours (ideally minutes).
-    \item Scale over large number of distributed cores.
-    \item Use an SQL capable DB.
+    \item History.
+    \item Data structures.
+    \item Algorithms.
+    \item Best practices.
   \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{}
+  A C++ set of algorithms and data structures built like
+  the STL; with generic programming concepts.
+  Give some history.
+  \begin{itemize}
+    \item History.
+    \item Data structures.
+    \item Algorithms.
+    \item Best practices.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Applicability}
+  Explain that the general operations, transformation and
+  reduce, can be applied to a wide range of algorithms.
+  Not all, but a wide range. Talk about how the internals of
+  these general operations can be modified with functors.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Applicability}
+  List all the different algorithms in the Thrust examples.
+\end{frame}
+
+\section{Case Studies}
+
+\begin{frame}
+  \frametitle{Median}
+  Show the actual code differences.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Cusp}
+  A sparse linear algebra library.
+  Include the speedup chart for cusp.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Lattice Monte-Carlo Simulation}
+  Courtesy of Michael Wang.
+  \begin{itemize}
+    \item 30-40x speedup.
+  \end{itemize}
+\end{frame}
+
+\section{Conclusion}
+
+\begin{frame}
+  \frametitle{Bang for Buck}
+  %% \framesubtitle{Some?}
+  %% \begin{itemize}
+  %%   \item 
+  %% \end{itemize}
+  Some algorithms are as good as custom kernels.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Generic Programming}
+  %% \framesubtitle{Some?}
+  %% \begin{itemize}
+  %%   \item 
+  %% \end{itemize}
+  It's a big plus (plus).
+\end{frame}
+
+\begin{frame}
+  \frametitle{Long Term Support}
+  %% \framesubtitle{Some?}
+  %% \begin{itemize}
+  %%   \item 
+  %% \end{itemize}
+  Thrust included with CUDA now.
 \end{frame}
 
 \end{document}
