Just a little more work on the Thrust slides.

--- a/cuda_easy/thrust.tex
+++ b/cuda_easy/thrust.tex
@@ -43,19 +43,33 @@
 
 \begin{frame}
   \frametitle{What is Thrust?}
-  A general library for using CUDA with C++.
-  Uses ``generic programming'' concepts.
-  Can make programming CUDA much easier.
+  \begin{itemize}
+    \item A parallel algorithms library.
+    \item Resembles the C++ Standard Template Library.
+    \item Enhances {\emph productivity}.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{History}
-  Where did Thrust come from, who wrote it, when, etc.
+  \frametitle{Architectures}
+  Thrust is not limited to GPUs...
+  \begin{itemize}
+    \item Multicore CPUs.
+    \item GPUs.
+    \item OpenMP.
+    \item Intel Threading Building Blocks.
+  \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Current Status}
-  Actively developed, supported by Nvidia, 240+ active users.
+  \frametitle{Current Statuts}
+  \begin{itemize}
+    \item Open source.
+    \item Apache License 2.0.
+    \item Version 1.6.0.
+    \item Actively developed.
+    \item 240+ active users.
+  \end{itemize}
 \end{frame}
 
 \section{Results}
