--- a/cuda_easy/thrust.tex
+++ b/cuda_easy/thrust.tex
@@ -3,6 +3,9 @@
 %% \documentclass[aspectratio=169]{beamer}
 
 \usepackage[latin1]{inputenc}
+\usepackage{tikz}
+\usetikzlibrary{calc}
+\usetikzlibrary{arrows}
 \usepackage{color}
 %% \usepackage[dvipsnames]{xcolor}
 %% \usepackage{amsmath}
@@ -27,6 +30,10 @@
 \usepackage{tikz}
 \usetikzlibrary{calc}
 \usetikzlibrary{arrows}
+\definecolor{theblue}{HTML}{236EAF}
+\definecolor{theorange}{HTML}{F7800A}
+\definecolor{thelightblue}{HTML}{98BBDA}
+\definecolor{thedarkblue}{HTML}{02468F}
 
 % Set Beamer mode.
 \mode<presentation>{
